Add banner image below title

--- a/index.html
+++ b/index.html
@@ -4,15 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Extraordinary SMP</title>
-    <link rel="stylesheet" href="style.css"> <!-- Optional: For styling -->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>Welcome to Extraordinary SMP!</h1>
-        <p>Your community-driven Minecraft survival server.</p>
-    </header>
-    <footer>
-        <p>Join us now!</p>
-    </footer>
+    <h1>Welcome to Extraordinary SMP</h1>
+    <!-- Banner Image -->
+    <img src="Banner.png" alt="Banner" class="banner-image">
+    
+    <p>This is the official site for the Extraordinary SMP server.</p>
 </body>
 </html>
